syntax = "proto3";
package com.vang;
option java_outer_classname = "AdminClientServer";
option java_multiple_files = true;
option java_package = "com.vang.authadminservice.grpc.gen";

service AuthenticateAdmin {
  rpc login(AuthenticateAdminRequest) returns (AuthenticateAdminReply);
}

message AuthenticateAdminRequest {
  string username = 1;
}

message AuthenticateAdminReply {
  bool status = 1;
  string password = 2;
}